# ControlP2

./: README.md
control_p2/: CMakeLists.txt  package.xml
control_p2/include/control_p2/: control_manager.hpp  control_node.hpp  options.hpp  target.hpp  utils.hpp
control_p2/include/control_p2/math/: lp_pursuit.hpp  pure_pursuit.hpp
control_p2/include/control_p2/model/: dry_model.hpp  vehicle_config.hpp
control_p2/src/: control_manager.cpp  control_node.cpp  target.cpp
control_p2/src/ math/: pure_pursuit.cpp
control_p2/src/math/: lp_pursuit.cpp  pure_pursuit.cpp
model/: dry.yaml
test/: test_manager.cpp  test_node.cpp
